Fix dialog overflow to be visible instead of the default hidden (#969)

--- a/packages/components/dialog/src/dialog.scss
+++ b/packages/components/dialog/src/dialog.scss
@@ -41,6 +41,7 @@ dialog {
   );
   max-inline-size: var(--_max-inline-size);
   opacity: 0;
+  overflow: visible;
   padding-block: var(--_padding-block);
   padding-inline: var(--_padding-inline);
 }
